--- a/src/Email.css
+++ b/src/Email.css
@@ -1,5 +1,8 @@
+.email{
+    text-align: center;
+}
+
 .email input{
-    height: 25px;
     width: 350px;
     padding: 15px;
     border: 1px solid #ffffff50;
