--- a/src/Faq.css
+++ b/src/Faq.css
@@ -1,14 +1,61 @@
-.faqs{
-    flex-direction: column;
-    text-align: center;
+.faq-external{
+    border-bottom: 8px solid #232323;
+    padding-bottom: 60px;
 }
 
-.faqs .title{
-    margin-bottom: 40px;
+.faqs {
+    width: 100%;
+    max-width: 1268px;
+    margin: 0 auto;
+    padding: 15px;
 }
 
-.faq{
-    width: 1200px;
-    height: 50px;
-    background-color: grey;
+.faqs .faq {
+    margin: 15px;
+    padding: 15px;
+    background: #2d2d2d;
+}
+
+.faqs .faq .faq-question {
+    position: relative;
+    font-size: 26px;
+    padding-right: 80px;
+    transition: all 0.4s ease;
+}
+
+.faqs .faq .faq-question::after {
+    content: "+";
+    font-size: 40px;
+    position: absolute;
+    top: 0%;
+    right: 0px;
+    transform: translateY(-60%);
+    width: 30px;
+    height: 30px;
+    transition: all 0.2s ease;
+    -webkit-transform: translateY(-60%);
+    -moz-transform: translateY(-60%);
+    -ms-transform: translateY(-60%);
+    -o-transform: translateY(-60%);
+}
+
+.faqs .faq .faq-answer {
+    opacity: 0;
+    max-height: 0;
+    overflow: hidden;
+    font-size: 26px;
+    transition: all 0.2s ease;
+}
+
+.faqs .faq.open .faq-question {
+    margin-bottom: 15px;
+}
+
+.faqs .faq.open .faq-question::after {
+    content: "-";
+}
+
+.faqs .faq.open .faq-answer {
+    max-height: 1000px;
+    opacity: 1;
 }
