--- a/src/Section.css
+++ b/src/Section.css
@@ -1,4 +1,4 @@
-section{
+section {
     display: flex;
     justify-content: space-between;
     padding-left: 5%;
@@ -8,17 +8,17 @@ section{
     border-bottom: 8px solid #232323;
 }
 
-section .title{
+section .title {
     font-size: 50px;
 }
 
 
-.section-content{
+.section-content {
     width: 550px;
     align-self: center;
 }
 
-.innert-section-content{
+.innert-section-content {
     font-size: 25px;
     font-weight: lighter;
 }
@@ -34,30 +34,76 @@ section .title{
     top: 0;
     left: 0;
     z-index: 1;
-    width:80%;
+    width: 80%;
 }
 
-.section-img video{
+.section-img video {
     position: absolute;
     top: 0;
     left: 10%;
 }
 
-.vbt{
-    width:45%;
-    top:10% !important;    
+.vbt {
+    width: 45%;
+    top: 10% !important;
     left: 20% !important;
 }
 
-.vt{
+.vt {
     width: 60%;
     height: 100%;
 }
 
 
 @media (max-width: 1280px) {
-    section{
+    section {
         padding-left: 2%;
         padding-right: 2%;
     }
+}
+
+@media (max-width: 900px) {
+    section {
+        flex-direction: column;
+        align-items: center;
+        padding-left: 0%;
+        padding-right: 0%;
+    }
+
+    section .title {
+        font-size: 30px;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+
+    .innert-section-content {
+        font-size: 20px;
+        text-align: center;
+    }
+
+    .section-content {
+        width: 80%;
+    }
+
+    .section-img {
+        width: 80%;
+    }
+
+    .section-img img {
+        width: 100%;
+    }
+
+    .section-img video {
+        width: 90%;
+    }
+
+    .vbt {
+        width: 60% !important;
+    }
+
+    .vt {
+        width: 100%;
+        height: 100%;
+    }
+
 }
