--- a/src/Section_ph.css
+++ b/src/Section_ph.css
@@ -19,6 +19,8 @@
     width: 350px;
     height: 80px;
     justify-content: space-around;
+    margin-bottom: 20px;
+    
 }
 
 .bottom-start{
@@ -26,8 +28,8 @@
 }
 
 .ph-img{
-    height:80px;
-    width: 60px;
+    height:60px;
+    width: 40px;
     margin-right: 10px;
 }
 
@@ -40,4 +42,7 @@
 .phc{
     font-size: 15px;
     color: blue;
+}
+.p-content{
+    margin-top: 10px;
 }
